--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="accent">#94C77D</color>
+    <color name="gray">#e8e8f7</color>
+    <color name="text_gray">#C1C0BF</color>
 </resources>
