--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
-        class="com.example.newsbreeze.ui.home.HomeFragment"
+        android:name="com.example.newsbreeze.ui.home.HomeFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
