--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,35 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="100"
+    android:background="#f8f8fb"
     tools:context=".ui.home.HomeFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="20"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-        
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginVertical="20dp"
+            android:layout_toLeftOf="@+id/home_saved_btn"
+            android:fontFamily="@font/passero_one"
+            android:paddingLeft="25dp"
+            android:text="NewsBreeze"
+            android:textSize="24sp" />
+
+        <ImageButton
+            android:id="@+id/home_saved_btn"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_saved_btn"
+            android:padding="20dp"
+            android:src="@drawable/ic_saved" />
+        
+    </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="25dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:background="@drawable/rounded_search_bg">
 
-            <ImageButton
-                android:layout_width="@dimen/home_save_btn"
-                android:layout_height="@dimen/home_save_btn"/>
+            <ImageView
+                android:id="@+id/search_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_baseline_search_24" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:textSize="14sp"
+                android:layout_toRightOf="@+id/search_icon"
+                android:layout_toLeftOf="@+id/filter_icon"
+                android:backgroundTint="@color/white"
+                android:layout_centerVertical="true"
+                android:inputType="text" />
+
+            <ImageView
+                android:id="@+id/filter_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_baseline_filter_alt_24" />
 
         </RelativeLayout>
-        
-    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_breaking_news"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="80"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
