--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#f8f8fb"
+    android:orientation="vertical"
     tools:context=".ui.home.HomeFragment">
 
     <RelativeLayout
@@ -36,54 +36,54 @@
             android:background="@drawable/rounded_saved_btn"
             android:padding="20dp"
             android:src="@drawable/ic_saved" />
-        
+
     </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
-            android:paddingVertical="8dp"
-            android:paddingHorizontal="20dp"
-            android:layout_marginVertical="20dp"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="20dp"
+        android:background="@drawable/rounded_search_bg"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="8dp">
+
+        <ImageView
+            android:id="@+id/search_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/rounded_search_bg">
+            android:src="@drawable/ic_baseline_search_24" />
 
-            <ImageView
-                android:id="@+id/search_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_baseline_search_24" />
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/filter_icon"
+            android:layout_toRightOf="@+id/search_icon"
+            android:backgroundTint="@color/white"
+            android:inputType="text"
+            android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:textSize="14sp"
-                android:layout_toRightOf="@+id/search_icon"
-                android:layout_toLeftOf="@+id/filter_icon"
-                android:backgroundTint="@color/white"
-                android:layout_centerVertical="true"
-                android:inputType="text" />
+        <ImageView
+            android:id="@+id/filter_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_baseline_filter_alt_24" />
 
-            <ImageView
-                android:id="@+id/filter_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_baseline_filter_alt_24" />
-
-        </RelativeLayout>
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_breaking_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="20dp"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never" />
 
 </LinearLayout>
