--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.example.newsbreeze.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_nav_home_to_detailedNewsFragment"
             app:destination="@id/detailedNewsFragment" />
@@ -25,7 +25,6 @@
     <fragment
         android:id="@+id/savedFragment"
         android:name="com.example.newsbreeze.ui.saved.SavedFragment"
-        android:label="fragment_saved"
-        tools:layout="@layout/fragment_saved" />
+        android:label="SavedFragment" />
 
 </navigation>
