create detailed fragment layout

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,7 +21,25 @@
         android:id="@+id/detailedNewsFragment"
         android:name="com.example.newsbreeze.ui.detailed.DetailedNewsFragment"
         android:label="fragment_detailed_news"
-        tools:layout="@layout/fragment_detailed_news" />
+        tools:layout="@layout/fragment_detailed_news" >
+        <argument
+            android:name="author"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="publishedAt"
+            app:argType="string" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <argument
+            android:name="content"
+            app:argType="string" />
+        <argument
+            android:name="urlToImage"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/savedFragment"
         android:name="com.example.newsbreeze.ui.saved.SavedFragment"
