--- a/app/src/main/res/layout/fragment_detailed_news.xml
+++ b/app/src/main/res/layout/fragment_detailed_news.xml
@@ -14,8 +14,10 @@
         android:layout_height="300dp">
 
         <ImageView
+            android:id="@+id/bg_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@color/accent" />
 
         <RelativeLayout
@@ -71,6 +73,7 @@
                 app:riv_corner_radius="5dp" />
 
             <TextView
+                android:id="@+id/author_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -98,6 +101,7 @@
             android:layout_below="@id/author_card" >
 
         <TextView
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
